Revised the introductory content for this lab four assignment.

--- a/labs/lab4/cs440S2014-lab4.tex
+++ b/labs/lab4/cs440S2014-lab4.tex
@@ -11,11 +11,12 @@
 \section*{Introduction}
 
 Processes and threads are commonly used by the operating system itself and by the programs that run on the operating
-system.  In this laboratory assignment, you will download, use, extend, and experiment with a multi-threaded
-producer-consumer model that uses semaphores, in contrast to the previous assignment that relied on Java's {\tt
-  synchronized} keyword.  As in the previous assignment, you will add some features to the model that enable you to
-experiment with it more effectively.  Finally, you will systematically break various parts of the model in order to
-observe what can go wrong when implementing multi-threaded Java programs that use semaphores.
+system. In the previous laboratory assignment you learned how to implement and evaluate Java programs that use the {\tt
+  synchronized} keyword to create a multi-threaded produced consumer model. In this laboratory assignment, you will
+download, use, extend, and experiment with a multi-threaded producer-consumer model that uses semaphores,  As in the
+previous assignment, you will add some features to the model that enable you to experiment with it more effectively.
+Finally, you will systematically break various parts of the model in order to observe what can go wrong when
+implementing multi-threaded Java programs that use semaphores.
 
 \section*{Accessing the Producer-Consumer Model}
 
